Added support for assertions (assert.h) to the standard library.

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -5,11 +5,12 @@ CFLAGS=-I../include
 B=$(BUILDDIR)/
 O=.ulo
 
-OBJS=	$Bcrtstart$O $Bctype$O $Bglulx$O $Bglk$O $Bintstr$O $Bprintf$O \
-	$Bstdlib$O $Bstring$O
+OBJS=	$Bassert$O $Bcrtstart$O $Bctype$O $Bglulx$O $Bglk$O $Bintstr$O \
+	$Bprintf$O $Bstdlib$O $Bstring$O
 
 all: $Blibc.ulo
 
+$Bassert$O:	assert.c;	$(CC) $(CFLAGS) -c -o $@ $<
 $Bcrtstart$O:	crtstart.ula;	$(CC) $(CFLAGS) -c -o $@ $<
 $Bctype$O:	ctype.c;	$(CC) $(CFLAGS) -c -o $@ $<
 $Bglulx$O:	glulx.ula;	$(CC) $(CFLAGS) -c -o $@ $<
