--- a/lib/Makefile
+++ b/lib/Makefile
@@ -5,14 +5,15 @@ CFLAGS=-I../include
 B=$(BUILDDIR)/
 O=.ulo
 
-OBJS=	$Bassert$O $Bcrtstart$O $Bctype$O $Bglulx$O $Bglk$O $Bintstr$O \
-	$Bprintf$O $Bputs$O $Bstdlib$O $Bstring$O
+OBJS=	$Bassert$O $Bcrtstart$O $Bctype$O $Bdivmod$O $Bglulx$O $Bglk$O \
+	$Bintstr$O $Bprintf$O $Bputs$O $Bstdlib$O $Bstring$O
 
 all: $Blibc.ulo
 
 $Bassert$O:	assert.c;	$(CC) $(CFLAGS) -c -o $@ $<
 $Bcrtstart$O:	crtstart.ula;	$(CC) $(CFLAGS) -c -o $@ $<
 $Bctype$O:	ctype.c;	$(CC) $(CFLAGS) -c -o $@ $<
+$Bdivmod$O:	divmod.ula;	$(CC) $(CFLAGS) -c -o $@ $<
 $Bglulx$O:	glulx.ula;	$(CC) $(CFLAGS) -c -o $@ $<
 $Bglk.ula:	glk.m4;		m4 $< >$@ 
 $Bglk$O:	$Bglk.ula;	$(CC) $(CFLAGS) -c -o $@ $<
